tests: removing deprecated Class.newInstance